--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
         <script src="scripts/controllers/view.js"></script>
         <script src="scripts/controllers/delete.js"></script>
         <script src="scripts/controllers/create.js"></script>
+        <script src="scripts/services/petservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
